--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Document</title>
+    <title>Monir Bishal</title>
     <link href="https://fonts.googleapis.com/css?family=Mina:400,700|Rubik:300,400,500,700&amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="et-line-font/style.css">
     <link rel="stylesheet" href="css/slick.css">
@@ -24,7 +24,7 @@
     <header id="full_nav" class="navbar-dark">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light" id="myScrollspy">
-                <a class="navbar-brand" href="#">Morgan</a>
+                <a class="navbar-brand" href="#">Monir Bishal</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_toggler" aria-controls="navbar_toggler" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -59,7 +59,7 @@
     <section id="full_banner">
         <div class="container">
             <div class="banner_txt text-center">
-                <h1>Hello I'm Morgan</h1>
+                <h1>Hello I'm Monir Bishal</h1>
                 <h3>A Professional Web <span id="typehere"></span></h3>
             </div>
         </div>
@@ -259,7 +259,7 @@
         </div>
         <div class="row" id="portfolio_slick">
             <div class="portfolio-col" style="width: 33.33%">
-                <img class="w-100" src="images/project-4.jpg" title="Morgan" alt="Morgan" />
+                <img class="w-100" src="images/project-4.jpg" title="Monir Bishal" alt="Monir Bishal" />
                 <div class="bg-theme">
                     <a href="#"></a>
                 </div>
@@ -270,7 +270,7 @@
             </div>
             <!-- col -->
             <div class="portfolio-col" style="width: 33.33%">
-                <img class="w-100" src="images/project-1.jpg" title="Morgan" alt="Morgan" />
+                <img class="w-100" src="images/project-1.jpg" title="Monir Bishal" alt="Monir Bishal" />
                 <div class="bg-theme">
                     <a href="#"></a>
                 </div>
@@ -281,7 +281,7 @@
             </div>
             <!-- col -->
             <div class="portfolio-col" style="width: 33.33%">
-                <img class="w-100" src="images/project-3.jpg" title="Morgan" alt="Morgan" />
+                <img class="w-100" src="images/project-3.jpg" title="Monir Bishal" alt="Monir Bishal" />
                 <div class="bg-theme">
                     <a href="#"></a>
                 </div>
@@ -292,7 +292,7 @@
             </div>
             <!-- col -->
             <div class="portfolio-col" style="width: 33.33%">
-                <img class="w-100" src="images/project-3.jpg" title="Morgan" alt="Morgan" />
+                <img class="w-100" src="images/project-3.jpg" title="Monir Bishal" alt="Monir Bishal" />
                 <div class="bg-theme">
                     <a href="#"></a>
                 </div>
@@ -563,7 +563,7 @@
                     <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
                     <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                 </ul>
-                <p class="copyright">© 2018 Monir-Bishal. All Rights Reserved</p>
+                <p class="copyright">© 2021 Monir Bishal. All Rights Reserved</p>
             </div>
         </div>
     </footer>
